--- a/uts-mla-nba/notebooks/kotak_sahil-24707592-week1_logistic_regression_model_2.ipynb
+++ b/uts-mla-nba/notebooks/kotak_sahil-24707592-week1_logistic_regression_model_2.ipynb
@@ -1262,52 +1262,42 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "67a60990-70de-4bc0-901f-9f26a75903b6",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
-   "id": "ed78ad6d",
+   "id": "5f1396dd-ae81-4c4e-ac28-e8f0b9a27289",
    "metadata": {},
    "source": [
-    "## Model Training"
+    "## Feature Engineering"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "5bd62343",
+   "execution_count": 12,
+   "id": "a0806ea7-ded6-406c-b126-7114a3bcee1f",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.9910943972095052"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.preprocessing import StandardScaler, OneHotEncoder\n",
-    "from sklearn.compose import ColumnTransformer\n",
-    "from sklearn.pipeline import Pipeline\n",
-    "from sklearn.linear_model import LogisticRegression\n",
-    "from sklearn.metrics import roc_auc_score\n",
     "\n",
     "# Split the data into train and validation sets\n",
     "X = train_data.drop(['player_id', 'drafted'], axis=1)\n",
     "y = train_data['drafted']\n",
-    "X_train, X_val, y_train, y_val = train_test_split(X, y, test_size=0.2, random_state=42)\n",
+    "X_train, X_val, y_train, y_val = train_test_split(X, y, test_size=0.2, random_state=42)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "f5619dbf-eacd-4173-ae86-9d44e2b19f68",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "from sklearn.preprocessing import StandardScaler, OneHotEncoder\n",
+    "from sklearn.compose import ColumnTransformer\n",
+    "from sklearn.pipeline import Pipeline\n",
     "\n",
     "# Identify numerical and categorical columns\n",
     "numerical_cols = X_train.select_dtypes(include=['int64', 'float64']).columns.tolist()\n",
@@ -1324,7 +1314,39 @@
     "    transformers=[\n",
     "        ('num', numerical_transformer, numerical_cols),\n",
     "        ('cat', categorical_transformer, categorical_cols)\n",
-    "    ])\n",
+    "    ])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ed78ad6d",
+   "metadata": {},
+   "source": [
+    "## Model Training"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "5bd62343",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.9910943972095052"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.metrics import roc_auc_score\n",
     "\n",
     "# Define the model\n",
     "model = LogisticRegression(max_iter=1000, random_state=42)\n",
@@ -1354,7 +1376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 15,
    "id": "358aa1a4",
    "metadata": {
     "tags": []
@@ -1363,10 +1385,10 @@
     {
      "data": {
       "text/plain": [
-       "'submissions_logisticregression1.csv'"
+       "'submissions_logisticregressionmodel_2.csv'"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1379,10 +1401,18 @@
     "submission = pd.DataFrame({'player_id': test_data['player_id'], 'drafted': test_preds})\n",
     "\n",
     "# Save the submission DataFrame to a CSV file\n",
-    "submission_path = 'submissions_logisticregression1.csv'\n",
+    "submission_path = 'submissions_logisticregressionmodel_2.csv'\n",
     "submission.to_csv(submission_path, index=False)\n",
     "submission_path"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c5a745b0-2744-4d6c-8f44-aa094bce29d8",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
