--- a/uts-mla-nba/notebooks/kotak_sahil-24707592-week3_ensemble_model_1.ipynb
+++ b/uts-mla-nba/notebooks/kotak_sahil-24707592-week3_ensemble_model_1.ipynb
@@ -181,7 +181,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Sahil Kotak\\AppData\\Local\\Temp\\ipykernel_7880\\2529321639.py:2: DtypeWarning: Columns (26) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "C:\\Users\\Sahil Kotak\\AppData\\Local\\Temp\\ipykernel_2020\\2529321639.py:2: DtypeWarning: Columns (26) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  train_data = pd.read_csv('../data/raw/train.csv')\n"
      ]
     },
@@ -1693,7 +1693,7 @@
    },
    "outputs": [],
    "source": [
-    "from data.data_preprocessing import preprocess_func\n",
+    "from data.data_preprocessing_v2 import preprocess_func\n",
     "\n",
     "preprocessed_train_data, training_statistics = preprocess_func(train_data, original_df=original_train_data)"
    ]
@@ -1873,7 +1873,7 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 61 columns</p>\n",
+       "<p>5 rows × 60 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -1898,7 +1898,7 @@
        "3   4.9333  14f05660-bb3c-4868-b3dd-09bcdb64279d      0.0  \n",
        "4   7.5758  a58db52f-fbba-4e7b-83d0-371efcfed039      0.0  \n",
        "\n",
-       "[5 rows x 61 columns]"
+       "[5 rows x 60 columns]"
       ]
      },
      "execution_count": 12,
@@ -1921,30 +1921,28 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "d8aaf222-5488-4d96-8d0c-a334cf41941e",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "df_new = preprocessed_train_data.drop(columns=\"player_id\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
    "id": "498372d3-be7f-4061-9ae9-b92584c8b471",
    "metadata": {
     "tags": []
    },
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Sahil Kotak\\AppData\\Local\\pypoetry\\Cache\\virtualenvs\\uts-mla-nba-lWDXW3Wo-py3.11\\Lib\\site-packages\\sklearn\\preprocessing\\_encoders.py:202: UserWarning: Found unknown categories in columns [2] during transform. These unknown categories will be encoded as all zeros\n",
+      "  warnings.warn(\n",
+      "C:\\Users\\Sahil Kotak\\AppData\\Local\\pypoetry\\Cache\\virtualenvs\\uts-mla-nba-lWDXW3Wo-py3.11\\Lib\\site-packages\\sklearn\\preprocessing\\_encoders.py:202: UserWarning: Found unknown categories in columns [2] during transform. These unknown categories will be encoded as all zeros\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "0.9913005958869269"
+       "0.990886381803648"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1952,13 +1950,13 @@
    "source": [
     "from models.svm_logistic_ensemble_v2 import train_stacking_ensemble\n",
     "\n",
-    "trained_logreg, trained_svm, trained_meta, stacking_auroc = train_stacking_ensemble(df_new, 'drafted')\n",
+    "trained_logreg, trained_svm, trained_meta, stacking_auroc = train_stacking_ensemble(preprocessed_train_data, 'drafted')\n",
     "stacking_auroc"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "id": "c2e735da-8fc4-41f9-a2fd-39ac27b6ccf5",
    "metadata": {
     "tags": []
@@ -1971,19 +1969,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "9096ac44-ad01-4639-b78e-916c7f8c53f3",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "df_test_new = preprocessed_test_data.drop(columns=\"player_id\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "id": "a4eeb423-4212-4941-8a91-248a19707907",
    "metadata": {
     "tags": []
@@ -1993,9 +1979,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Sahil Kotak\\AppData\\Local\\pypoetry\\Cache\\virtualenvs\\uts-mla-nba-lWDXW3Wo-py3.11\\Lib\\site-packages\\sklearn\\preprocessing\\_encoders.py:202: UserWarning: Found unknown categories in columns [0] during transform. These unknown categories will be encoded as all zeros\n",
+      "C:\\Users\\Sahil Kotak\\AppData\\Local\\pypoetry\\Cache\\virtualenvs\\uts-mla-nba-lWDXW3Wo-py3.11\\Lib\\site-packages\\sklearn\\preprocessing\\_encoders.py:202: UserWarning: Found unknown categories in columns [0, 2] during transform. These unknown categories will be encoded as all zeros\n",
       "  warnings.warn(\n",
-      "C:\\Users\\Sahil Kotak\\AppData\\Local\\pypoetry\\Cache\\virtualenvs\\uts-mla-nba-lWDXW3Wo-py3.11\\Lib\\site-packages\\sklearn\\preprocessing\\_encoders.py:202: UserWarning: Found unknown categories in columns [0] during transform. These unknown categories will be encoded as all zeros\n",
+      "C:\\Users\\Sahil Kotak\\AppData\\Local\\pypoetry\\Cache\\virtualenvs\\uts-mla-nba-lWDXW3Wo-py3.11\\Lib\\site-packages\\sklearn\\preprocessing\\_encoders.py:202: UserWarning: Found unknown categories in columns [0, 2] during transform. These unknown categories will be encoded as all zeros\n",
       "  warnings.warn(\n"
      ]
     }
@@ -2008,7 +1994,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 16,
    "id": "c2c6742a-3d7d-4ac3-8160-140896bebb2e",
    "metadata": {
     "tags": []
@@ -2043,27 +2029,27 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>cf302b4d-84f7-4124-a25d-a75eed31978b</td>\n",
-       "      <td>0.004186</td>\n",
+       "      <td>0.004475</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>f91837cd-4f49-4b70-963d-aeb82c6ce3da</td>\n",
-       "      <td>0.004186</td>\n",
+       "      <td>0.004475</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>53ec2a29-1e7d-4c6d-86d7-d60d02af8916</td>\n",
-       "      <td>0.004188</td>\n",
+       "      <td>0.004479</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>32402798-471c-4a54-8cb4-29cd95199014</td>\n",
-       "      <td>0.004186</td>\n",
+       "      <td>0.004475</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>73b960f9-27b8-4431-9d23-a760e9bbc360</td>\n",
-       "      <td>0.004295</td>\n",
+       "      <td>0.004579</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -2071,14 +2057,14 @@
       ],
       "text/plain": [
        "                              player_id   drafted\n",
-       "0  cf302b4d-84f7-4124-a25d-a75eed31978b  0.004186\n",
-       "1  f91837cd-4f49-4b70-963d-aeb82c6ce3da  0.004186\n",
-       "2  53ec2a29-1e7d-4c6d-86d7-d60d02af8916  0.004188\n",
-       "3  32402798-471c-4a54-8cb4-29cd95199014  0.004186\n",
-       "4  73b960f9-27b8-4431-9d23-a760e9bbc360  0.004295"
+       "0  cf302b4d-84f7-4124-a25d-a75eed31978b  0.004475\n",
+       "1  f91837cd-4f49-4b70-963d-aeb82c6ce3da  0.004475\n",
+       "2  53ec2a29-1e7d-4c6d-86d7-d60d02af8916  0.004479\n",
+       "3  32402798-471c-4a54-8cb4-29cd95199014  0.004475\n",
+       "4  73b960f9-27b8-4431-9d23-a760e9bbc360  0.004579"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2089,7 +2075,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 17,
    "id": "f4893c60-3d6a-4696-8582-19a4648f8143",
    "metadata": {
     "tags": []
@@ -2098,17 +2084,17 @@
     {
      "data": {
       "text/plain": [
-       "'submission_week2_stackingmodel.csv'"
+       "'submission_week3_stackingmodel.csv'"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Save the submission DataFrame to a CSV file\n",
-    "submission_path = 'submission_week2_stackingmodel.csv'\n",
+    "submission_path = 'submission_week3_stackingmodel.csv'\n",
     "stacking_predictions_df.to_csv(submission_path, index=False)\n",
     "submission_path"
    ]
