--- a/uts-mla-nba/notebooks/kotak_sahil-24707592-week3_xgboost_model_1.ipynb
+++ b/uts-mla-nba/notebooks/kotak_sahil-24707592-week3_xgboost_model_1.ipynb
@@ -181,7 +181,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Sahil Kotak\\AppData\\Local\\Temp\\ipykernel_7880\\2529321639.py:2: DtypeWarning: Columns (26) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "C:\\Users\\Sahil Kotak\\AppData\\Local\\Temp\\ipykernel_16516\\2529321639.py:2: DtypeWarning: Columns (26) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  train_data = pd.read_csv('../data/raw/train.csv')\n"
      ]
     },
@@ -1693,7 +1693,7 @@
    },
    "outputs": [],
    "source": [
-    "from data.data_preprocessing import preprocess_func\n",
+    "from data.data_preprocessing_v2 import preprocess_func\n",
     "\n",
     "preprocessed_train_data, training_statistics = preprocess_func(train_data, original_df=original_train_data)"
    ]
@@ -1873,7 +1873,7 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 61 columns</p>\n",
+       "<p>5 rows × 60 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -1898,7 +1898,7 @@
        "3   4.9333  14f05660-bb3c-4868-b3dd-09bcdb64279d      0.0  \n",
        "4   7.5758  a58db52f-fbba-4e7b-83d0-371efcfed039      0.0  \n",
        "\n",
-       "[5 rows x 61 columns]"
+       "[5 rows x 60 columns]"
       ]
      },
      "execution_count": 12,
@@ -1912,205 +1912,168 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4ed204c2-f5d4-429e-8de1-2577bf654a1d",
-   "metadata": {},
+   "id": "ce3a93af-2744-4c51-ad89-97d31947a6de",
+   "metadata": {
+    "tags": []
+   },
    "source": [
-    "## Feature Engineering & Model Training"
+    "## Feature Engineering"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "d8aaf222-5488-4d96-8d0c-a334cf41941e",
+   "id": "45957252-6927-498e-8ba6-1d5249c0ac99",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "df_new = preprocessed_train_data.drop(columns=\"player_id\")"
+    "from sklearn.model_selection import train_test_split, RandomizedSearchCV\n",
+    "from sklearn.preprocessing import StandardScaler, OneHotEncoder\n",
+    "from sklearn.compose import ColumnTransformer\n",
+    "\n",
+    "\n",
+    "\n",
+    "# Split the data into training and validation sets\n",
+    "X = preprocessed_train_data.drop(['drafted'], axis=1)\n",
+    "y = preprocessed_train_data['drafted']\n",
+    "X_train, X_val, y_train, y_val = train_test_split(X, y, test_size=0.2, random_state=42)\n",
+    "\n",
+    "# Identify numerical and categorical columns\n",
+    "numerical_cols = X_train.select_dtypes(include=['int64', 'float64']).columns.tolist()\n",
+    "categorical_cols = X_train.select_dtypes(include=['object']).columns.tolist()\n",
+    "\n",
+    "# Preprocessing for numerical data\n",
+    "numerical_transformer = StandardScaler()\n",
+    "\n",
+    "# Preprocessing for categorical data\n",
+    "categorical_transformer = OneHotEncoder(handle_unknown='ignore')\n",
+    "\n",
+    "# Bundle preprocessing for numerical and categorical data\n",
+    "preprocessor = ColumnTransformer(\n",
+    "    transformers=[\n",
+    "        ('num', numerical_transformer, numerical_cols),\n",
+    "        ('cat', categorical_transformer, categorical_cols)\n",
+    "    ])\n",
+    "\n",
+    "# Apply preprocessing\n",
+    "X_train_scaled = preprocessor.fit_transform(X_train)\n",
+    "X_val_scaled = preprocessor.transform(X_val)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "41dc2ee4-b625-425c-be9d-9f5d151d61fa",
+   "metadata": {},
+   "source": [
+    "## Modeling"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "498372d3-be7f-4061-9ae9-b92584c8b471",
+   "id": "918f6564-c442-4724-b792-26c665de9dff",
    "metadata": {
     "tags": []
    },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "0.9913005958869269"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Best AUROC Score: 0.9897645519947679\n",
+      "Best Hyperparameters: {'subsample': 0.7, 'n_estimators': 500, 'max_depth': 10, 'learning_rate': 0.05, 'gamma': 0.25, 'colsample_bytree': 0.9}\n"
+     ]
     }
    ],
    "source": [
-    "from models.svm_logistic_ensemble_v2 import train_stacking_ensemble\n",
+    "from sklearn.metrics import roc_auc_score\n",
+    "import xgboost as xgb\n",
+    "# Define the XGBoost model and hyperparameters for tuning\n",
+    "xgb_model = xgb.XGBClassifier(objective='binary:logistic', random_state=42, n_jobs=-1, eval_metric='auc')\n",
+    "param_dist = {\n",
+    "    'learning_rate': [0.01, 0.05, 0.1, 0.5, 1],\n",
+    "    'n_estimators': [50, 100, 200, 500],\n",
+    "    'max_depth': [3, 5, 7, 10],\n",
+    "    'subsample': [0.5, 0.7, 0.9, 1],\n",
+    "    'colsample_bytree': [0.5, 0.7, 0.9, 1],\n",
+    "    'gamma': [0, 0.25, 0.5, 1]\n",
+    "}\n",
     "\n",
-    "trained_logreg, trained_svm, trained_meta, stacking_auroc = train_stacking_ensemble(df_new, 'drafted')\n",
-    "stacking_auroc"
+    "# Use RandomizedSearchCV for hyperparameter tuning\n",
+    "random_search = RandomizedSearchCV(xgb_model, param_distributions=param_dist, n_iter=50, scoring='roc_auc', \n",
+    "                                   n_jobs=-1, cv=3, random_state=42)\n",
+    "random_search.fit(X_train_scaled, y_train)\n",
+    "\n",
+    "# Get the best model\n",
+    "best_xgb_model = random_search.best_estimator_\n",
+    "\n",
+    "# Predict on the validation set\n",
+    "xgb_preds = best_xgb_model.predict_proba(X_val_scaled)[:, 1]\n",
+    "\n",
+    "# Get the AUROC score\n",
+    "xgb_val_score = roc_auc_score(y_val, xgb_preds)\n",
+    "\n",
+    "print(f\"Best AUROC Score: {xgb_val_score}\")\n",
+    "print(f\"Best Hyperparameters: {random_search.best_params_}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c68ca34c-7bc8-4ae1-8ae3-eec45a010846",
+   "metadata": {},
+   "source": [
+    "## Generating Test Data Result"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "c2e735da-8fc4-41f9-a2fd-39ac27b6ccf5",
+   "id": "df89dcae-d6af-4986-a0f7-c0dc66f0e258",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "#Preprocess the test data using the train_stats from the training data preprocessing\n",
+    "# 1. Preprocess the test data using the train_stats from the training data preprocessing\n",
     "preprocessed_test_data, _ = preprocess_func(test_data, train_stats=training_statistics)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "9096ac44-ad01-4639-b78e-916c7f8c53f3",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "df_test_new = preprocessed_test_data.drop(columns=\"player_id\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "id": "a4eeb423-4212-4941-8a91-248a19707907",
+   "id": "bcdfe77d-ac72-4578-9cd1-edf4928eaf77",
    "metadata": {
     "tags": []
    },
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\Sahil Kotak\\AppData\\Local\\pypoetry\\Cache\\virtualenvs\\uts-mla-nba-lWDXW3Wo-py3.11\\Lib\\site-packages\\sklearn\\preprocessing\\_encoders.py:202: UserWarning: Found unknown categories in columns [0] during transform. These unknown categories will be encoded as all zeros\n",
-      "  warnings.warn(\n",
-      "C:\\Users\\Sahil Kotak\\AppData\\Local\\pypoetry\\Cache\\virtualenvs\\uts-mla-nba-lWDXW3Wo-py3.11\\Lib\\site-packages\\sklearn\\preprocessing\\_encoders.py:202: UserWarning: Found unknown categories in columns [0] during transform. These unknown categories will be encoded as all zeros\n",
-      "  warnings.warn(\n"
-     ]
+     "data": {
+      "text/plain": [
+       "'submission_week3_xgboostmodel.csv'"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "from models.svm_logistic_ensemble_v2 import generate_stacking_predictions\n",
+    "# Apply preprocessing to the test data\n",
+    "X_test_scaled = preprocessor.transform(preprocessed_test_data)\n",
     "\n",
-    "stacking_predictions_df = generate_stacking_predictions(trained_logreg, trained_svm, trained_meta, preprocessed_test_data)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "id": "c2c6742a-3d7d-4ac3-8160-140896bebb2e",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>player_id</th>\n",
-       "      <th>drafted</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>cf302b4d-84f7-4124-a25d-a75eed31978b</td>\n",
-       "      <td>0.004186</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>f91837cd-4f49-4b70-963d-aeb82c6ce3da</td>\n",
-       "      <td>0.004186</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>53ec2a29-1e7d-4c6d-86d7-d60d02af8916</td>\n",
-       "      <td>0.004188</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>32402798-471c-4a54-8cb4-29cd95199014</td>\n",
-       "      <td>0.004186</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>73b960f9-27b8-4431-9d23-a760e9bbc360</td>\n",
-       "      <td>0.004295</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                              player_id   drafted\n",
-       "0  cf302b4d-84f7-4124-a25d-a75eed31978b  0.004186\n",
-       "1  f91837cd-4f49-4b70-963d-aeb82c6ce3da  0.004186\n",
-       "2  53ec2a29-1e7d-4c6d-86d7-d60d02af8916  0.004188\n",
-       "3  32402798-471c-4a54-8cb4-29cd95199014  0.004186\n",
-       "4  73b960f9-27b8-4431-9d23-a760e9bbc360  0.004295"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "stacking_predictions_df.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "id": "f4893c60-3d6a-4696-8582-19a4648f8143",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'submission_week2_stackingmodel.csv'"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
+    "# Use the best XGBoost model to make predictions\n",
+    "test_preds_xgb = best_xgb_model.predict_proba(X_test_scaled)[:, 1]\n",
+    "\n",
+    "# Create a submission DataFrame\n",
+    "submission_xgb = pd.DataFrame({'player_id': preprocessed_test_data['player_id'], 'drafted': test_preds_xgb})\n",
+    "\n",
     "# Save the submission DataFrame to a CSV file\n",
-    "submission_path = 'submission_week2_stackingmodel.csv'\n",
-    "stacking_predictions_df.to_csv(submission_path, index=False)\n",
-    "submission_path"
+    "submission_path_xgb = 'submission_week3_xgboostmodel.csv'\n",
+    "submission_xgb.to_csv(submission_path_xgb, index=False)\n",
+    "submission_path_xgb"
    ]
   }
  ],
