- changes to week3 xgboost

--- a/uts-mla-nba/notebooks/kotak_sahil-24707592-week3_xgboost_model_1.ipynb
+++ b/uts-mla-nba/notebooks/kotak_sahil-24707592-week3_xgboost_model_1.ipynb
@@ -1989,8 +1989,38 @@
     }
    ],
    "source": [
-    "from sklearn.metrics import roc_auc_score\n",
+    "from sklearn.model_selection import GridSearchCV\n",
+    "from sklearn.metrics import make_scorer, roc_auc_score\n",
     "import xgboost as xgb\n",
+    "\n",
+    "# Initialize an empty DataFrame to store the results\n",
+    "results_df = pd.DataFrame(columns=[\"Learning Rate\", \"N Estimators\", \"Max Depth\", \"Subsample\", \n",
+    "                                   \"Colsample Bytree\", \"Gamma\", \"ROC AUC Score\"])\n",
+    "\n",
+    "# Custom scorer to log parameters and scores\n",
+    "def custom_scorer(y_true, y_pred):\n",
+    "    score = roc_auc_score(y_true, y_pred)\n",
+    "    print(f\"ROC AUC Score: {score}\")\n",
+    "    return score\n",
+    "\n",
+    "# Function to update results DataFrame\n",
+    "def log_results(estimator):\n",
+    "    global results_df\n",
+    "    params = estimator.get_params()\n",
+    "    score = roc_auc_score(y_val, estimator.predict_proba(X_val_scaled)[:, 1])\n",
+    "    new_row = {\n",
+    "        \"Learning Rate\": params[\"learning_rate\"],\n",
+    "        \"N Estimators\": params[\"n_estimators\"],\n",
+    "        \"Max Depth\": params[\"max_depth\"],\n",
+    "        \"Subsample\": params[\"subsample\"],\n",
+    "        \"Colsample Bytree\": params[\"colsample_bytree\"],\n",
+    "        \"Gamma\": params[\"gamma\"],\n",
+    "        \"ROC AUC Score\": score\n",
+    "    }\n",
+    "    results_df = results_df.append(new_row, ignore_index=True)\n",
+    "    print(f\"Evaluating model with parameters: {params}\")\n",
+    "    print(f\"ROC AUC Score: {score}\")\n",
+    "\n",
     "# Define the XGBoost model and hyperparameters for tuning\n",
     "xgb_model = xgb.XGBClassifier(objective='binary:logistic', random_state=42, n_jobs=-1, eval_metric='auc')\n",
     "param_dist = {\n",
@@ -2002,13 +2032,24 @@
     "    'gamma': [0, 0.25, 0.5, 1]\n",
     "}\n",
     "\n",
-    "# Use RandomizedSearchCV for hyperparameter tuning\n",
-    "random_search = RandomizedSearchCV(xgb_model, param_distributions=param_dist, n_iter=50, scoring='roc_auc', \n",
-    "                                   n_jobs=-1, cv=3, random_state=42)\n",
-    "random_search.fit(X_train_scaled, y_train)\n",
+    "# Create a GridSearchCV object\n",
+    "grid_search = GridSearchCV(\n",
+    "    xgb_model, \n",
+    "    param_grid=param_dist, \n",
+    "    scoring=make_scorer(custom_scorer, needs_proba=True), \n",
+    "    n_jobs=-1, \n",
+    "    cv=3, \n",
+    "    verbose=2\n",
+    ")\n",
+    "\n",
+    "# Assuming X_train_scaled and y_train are your training data and labels\n",
+    "grid_search.fit(X_train_scaled, y_train)\n",
     "\n",
     "# Get the best model\n",
-    "best_xgb_model = random_search.best_estimator_\n",
+    "best_xgb_model = grid_search.best_estimator_\n",
+    "\n",
+    "# Log results for the best model\n",
+    "log_results(best_xgb_model)\n",
     "\n",
     "# Predict on the validation set\n",
     "xgb_preds = best_xgb_model.predict_proba(X_val_scaled)[:, 1]\n",
@@ -2017,7 +2058,9 @@
     "xgb_val_score = roc_auc_score(y_val, xgb_preds)\n",
     "\n",
     "print(f\"Best AUROC Score: {xgb_val_score}\")\n",
-    "print(f\"Best Hyperparameters: {random_search.best_params_}\")"
+    "print(f\"Best Hyperparameters: {grid_search.best_params_}\")\n",
+    "print(\"Logged Results:\")\n",
+    "print(results_df)\n"
    ]
   },
   {
